# claude-graphrag-mcp

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  ontology.py  pyproject.toml  server.py
